# alice.skilltech.tools

./: .env.example  .gitignore  .pre-commit-config.yaml  CREDITS.md  README.md  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml
api/: .dockerignore  Dockerfile  Dockerfile.dev  Makefile  pyproject.toml
api/app/: backend_pre_start.py  main.py  tests_pre_start.py
api/app/alembic/: env.py
api/app/alembic/versions/: 0732c430d1b2_job_table.py  0_initial_tables.py  1a978b6dc158_s3_path.py  1d2daf487df6_add_persona_field.py  25a9c5c77e21_add_user_name.py  2ea7bac6a845_remove_custom_path.py  3277621b4924_selection_field.py  4c06eee31b70_fixed_chatbot_type.py  6d46c4e2dc8d_enabled_field_for_chatbot.py  7ef1ca659243_add_chatbot_token.py  8af37a56196d_hash_chatbot_passwords.py  a1b2c3d4e5f6_add_prompt_suggestions.py  a5c8f1d3b942_add_chatbot_chat_request_count.py  a7f3b1c29e04_jobfile_and_progress_updated_at.py  a83b31c45426_add_moodle_integration.py  a8e3f2c91b67_add_persist_session_to_chatbot.py  abc4e2837085_add_password_field_to_chatbot.py  b2d5f8c1a3e7_add_chatbot_branding.py  b4e7f1a2c390_add_cite_sources_to_chatbot.py  b8c4f2d9a7e1_jobfile_error_detail.py  bb2d3210eb3e_enable_chatbot_by_default_and_private_.py  c3a1f8b92d47_add_api_enabled_to_chatbot.py  c5f8g2b3d491_add_force_ocr_to_chatbot.py  c7a4e3f8b2d1_add_is_free_text_to_uploaded_file.py  c7e1a9d4f582_add_last_chat_request_at.py  d105255ea249_add_user_role_field.py  d1267e33596f_add_chatbot_owner_timestamps.py  d2f4a6b8c013_add_pii_filter_enabled_to_chatbot.py  d4f8e2a1b3c5_drop_oauth_token_columns.py  d5f1a9e72c8b_jobfile_error_code.py  e1a9b7d4c203_add_chatbot_avatar_storage_path.py  e9909a40608e_rename_moodle_id_to_provider_id.py  f2359fb94ff2_persona_type.py  f2bd1483d7dd_file_upload.py  f3a2d8e94b15_add_chatbot_reindex_schedule.py  f4d9c1e6a2b8_add_index_manifest_to_kb.py  f90a2d6bd269_access_level.py  fe66bc588fcd_add_oauthsession_table.py
api/app/api_v2/: deps.py  main.py
api/app/api_v2/routes/: auth.py  monitoring.py  moodle.py  oauth.py  openai_compat.py  utils.py  workers.py
api/app/api_v2/routes/chatbots/: avatar.py  branding.py  chat.py  creation.py  files.py  jobs.py  lifecycle.py  listing.py  moodle.py  router.py  schemas.py
api/app/core/: config.py  db.py  metrics.py  storage.py
api/app/models/: enums.py  schemas.py  tables.py
api/app/repositories/: base.py  chatbot.py  datasource.py  job.py  knowledge_base.py  moodle.py  uploaded_file.py  user.py
api/app/services/: access_service.py  chatbot_service.py  citation_service.py  datasource_service.py  file_service.py  file_upload_service.py  index_manifest.py  indexing_service.py  knowledgebase_service.py  messaging_service.py  monitoring_service.py  moodle_service.py  oauth_service.py  openai_stream_format.py  orphan_detection.py  persona_service.py  pii_filter_service.py  rag_service.py  scheduler_service.py  selection_service.py
api/app/tests/: conftest.py
api/app/tests/api/routes/: test_chatbot_branding_schema.py  test_openai_compat_stream.py
api/app/tests/repositories/: test_job_repository.py  test_job_repository_metrics.py  test_jobfilestate_contract.py
api/app/tests/scripts/: test_backend_pre_start.py  test_cleanup_orphans.py  test_test_pre_start.py
api/app/tests/services/: test_access_service.py  test_citation_service.py  test_file_service_delete.py  test_index_manifest.py  test_knowledgebase_sync_completion.py  test_monitoring_service_metrics.py  test_orphan_detection.py  test_pii_filter_service.py  test_scheduler_run_metrics.py  test_scheduler_service.py  test_selection_service.py  test_url_validation.py  test_url_validation_contract.py
api/app/utils/: auth.py
api/scripts/: backfill_index_manifests.py  cleanup_orphans.py  detect_orphans.py  index_manifest_status.py  prestart.sh  stamp_index_manifests.py
docs/: index.md
frontend/: .npmrc  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json  tsconfig.app.json
scripts/: generate_credits.py
services/pii-filter/: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  Makefile  pyproject.toml
services/pii-filter/src/pii_filter/: detector.py  main.py  postprocess.py  redaction.py  schemas.py
services/pii-filter/tests/: test_api.py  test_postprocess.py  test_redaction.py
services/rag-pipeline/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-full-gpu.yml  docker-compose-full.yml  docker-compose.yml  pyproject.toml  test.sh
services/rag-pipeline/src/imports/: RedisJobStore.py  RedisSessionManager.py  config.py  index_config.py
services/rag-pipeline/src/imports/components/: DoclingChunker.py  DoclingServeConverter.py  DocumentToRedis.py  RAGPromptBuilder.py
services/rag-pipeline/src/pipeline_wrappers/document_ingestion/: components.py  pipeline_wrapper.py
services/rag-pipeline/src/pipeline_wrappers/document_management/: operations.py  pipeline_wrapper.py
services/rag-pipeline/src/pipeline_wrappers/rag_query/: pipeline_builder.py  pipeline_wrapper.py
services/rag-pipeline/src/pipeline_wrappers/session_manager/: pipeline_wrapper.py
services/rag-pipeline/tests/: conftest.py  test_docling_chunker.py  test_docling_serve_converter.py  test_document_management_delete.py  test_document_to_redis.py  test_index_config.py  test_rag_prompt_builder.py  test_redis_session_manager.py
sync/worker/: .dockerignore  Dockerfile  Makefile  pyproject.toml
sync/worker/src/: config.py  logcontext.py  main.py  metrics.py  worker.py
sync/worker/src/api/: haystack.py
sync/worker/src/core/: file_adapter.py  h5p_parser.py  moodle_adapter.py  moodle_export_client.py  nextcloud_adapter.py  scorm_parser.py  source_adapter.py  source_types.py  storage_paths.py  url_validation.py
sync/worker/src/core/processors/: __init__.py  base.py  h5p.py  registry.py  scorm.py
sync/worker/src/messaging/: progress.py  rabbitmq.py
sync/worker/src/storage/: minio_client.py
(+125 files in other folders)
