[project]
name = "pii-filter"
version = "0.1.0"
description = "PII detection"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "transformers==4.46.3",
    "torch==2.5.1",
    "sentencepiece==0.2.0",
    "protobuf==5.29.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.28.1",
    "coverage>=7.12.0",
    "ruff>=0.14.6",
    "mypy>=1.18.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
]
