[project]
name = "sync-worker"
version = "0.1.0"
description = "Sync worker for SCORM/Moodle content synchronization"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pika==1.3.2",
    "minio==7.2.20",
    "python-dotenv==1.2.2",
    "requests==2.33.0",
    "tqdm==4.67.3",
    "beautifulsoup4==4.14.3",
    "prometheus-client==0.23.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=4.1.0",
    "coverage>=7.12.0",
    "ruff>=0.14.6",
    "mypy>=1.18.2",
]

[tool.uv]
package = false
exclude-newer = "10 days"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "B904",  # Allow raising exceptions without from e
]